[project]
name = "sandbox-github-actions-scheduler"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.11.18",
    "asyncio>=3.4.3",
    "duckdb>=1.2.2",
    "google-api-python-client>=2.169.0",
    "google-auth>=2.39.0",
    "pandas>=2.2.3",
    "pyarrow>=20.0.0",
    "sentence-transformers>=5.1.1",
]
